# termin-scene

./: .gitignore  CMakeLists.txt  README.md  install.sh  mkdocs.yml
.github/workflows/: ci.yml  docs.yml
cmake/: termin_sceneConfig.cmake.in
cpp/: tc_scene.cpp
cpp/bindings/: component_bindings.cpp  component_registry_python.cpp  entity_bindings.cpp  scene_module.cpp  soa_bindings.cpp  tc_component_python_bindings.cpp  tc_component_ref_bindings.cpp  tc_scene_bindings.cpp  transform_bindings.cpp
cpp/entity/: component.cpp  component_registry.cpp  entity.cpp  input_handler.cpp  vtable_utils.cpp
cpp/geom/: general_transform3.cpp
docs/: api.md  architecture.md  extensions.md  getting-started.md  gotchas.md  handles.md  index.md  lifecycle.md  ownership.md  philosophy.md  soa.md
include/: tc_component_python.h  tc_hash_map.h  tc_type_registry.h  tc_types.h  tc_value.h
include/core/: tc_archetype.h  tc_component.h  tc_dlist.h  tc_entity_pool.h  tc_entity_pool_registry.h  tc_scene.h  tc_scene_extension.h  tc_scene_pool.h
include/inspect/: tc_inspect_context.h
include/termin/: export.hpp  tc_scene.hpp
include/termin/bindings/: component_bindings.hpp  entity_bindings.hpp  entity_helpers.hpp  scene_bindings.hpp  soa_bindings.hpp  tc_component_python_bindings.hpp  tc_component_ref_bindings.hpp  tc_value_helpers.hpp  transform_bindings.hpp
include/termin/entity/: component.hpp  component_registry.hpp  component_registry_python.hpp  entity.hpp  input_handler.hpp  vtable_utils.hpp
include/termin/geom/: general_transform3.hpp
include/termin/soa/: soa_type.hpp
include/termin_scene/: termin_scene.h
python/termin/: __init__.py
python/termin/scene/: __init__.py  python_component.py
src/: tc_archetype.c  tc_component.c  tc_component_python.c  tc_entity_pool.c  tc_entity_pool_registry.c  tc_hash_map.c  tc_scene.c  tc_scene_extension.c  tc_type_registry.c  tc_value.c  termin_scene_runtime.c  termin_scene_version.c
tests/: test_archetype.c  test_data_structures.c
